--- a/homework2.html
+++ b/homework2.html
@@ -242,8 +242,8 @@
 
                 <div class="iframe-container">
                     <h2>Our Sponsor</h2>
-                    <iframe src="https://www.google.com/" width="600" height="400" title="Google Official Website">
-                        Your browser does not support iframes. Please visit <a href="https://www.google.com/">Google's official website</a>.
+                    <iframe src="https://uh.edu/" width="600" height="400" title="UH Official Website">
+                        Your browser does not support iframes. Please visit <a href="https://uh.edu/">UH official website</a>.
                     </iframe>
                 </div>
                 
